@@ -39,6 +39,7 @@ version <next>:
 - rewritten ASF demuxer
 - Go2Meeting decoding support
 - Intel QSV-accelerated MPEG-2 video and HEVC encoding
+- bitstream filter for converting HEVC from MP4 to Annex B
 
 
 version 11:
